fixing h4 fonts on safari

--- a/src/app/issue/3/styles.css
+++ b/src/app/issue/3/styles.css
@@ -98,6 +98,10 @@ a.rsvp {
     /* font-weight: 600 !important; */
     font-size: 24px;
   }
+
+  h4.darker-grotesque {
+    font-family: "Darker Grotesque", sans-serif !important;
+  }
   
   h5 {
     font-size: 20px;
@@ -762,6 +766,13 @@ body > main > section.colophon > div.c-container > div > div > p {
     .p-h3 { 
         font-size: 40px;
         line-height: 50px;
+        /* font-family: "Alverata Light"; */
+    }
+
+    .p-h3.past { 
+        padding-top: 75px;
+        font-size: 56px;
+        line-height: 64px;
         /* font-family: "Alverata Light"; */
     }
 
